# git-commiter

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  modified-content.txt
.chglog/: config.yml
src/: CMakeLists.txt  config.h.in  git-committer-version.h.in  git-committer.c
